# AIIA-Website--Invoice-and-Receipt-Generator

./: .env  .replit  README.md  db_structure.txt  db_tables.txt  package-lock.json  package.json  pyproject.toml  query-db.ts  replit.md  replit.nix  reset-admin-pwd.ts  tailwind.config.ts  test-email.js  test-smtp2go-user.cjs  theme.json
.config/pulse/: cookie
.github/workflows/: keepalive.yml
attached_assets/: Pasted-Here-s-a-clean-optimized-Replit-prompt-tailored-to-your_1773736358497.txt  Pasted-Use-this-prompt-in-Replit-text-Update-the-existing-Proj_1773734988856.txt  Pasted-import-Router-from-express-import-ComputerVisionClient-from-azure-cognitiveservices-com-1739962751186.txt
client/: index.html
client/src/: App.tsx  index.css
db/: index.ts  schema.ts
db/metadata/: db_constraints.txt  db_full_metadata.txt  db_indexes.txt
docs/: disease-prediction-project.md  maize-disease-detection.md
scripts/tests/: test-attachments.cjs  test-email.cjs  test-email.ts  test-fetch.js  test-invoice.js  test-smtp2go.cjs  test-smtp2go.js  test-smtp2go.ts  test-transport.js
server/: .service.py.4145746611~  auth.ts  disease_prediction_demo.py  index.ts  maize_disease_detection.js  migrationRunner.ts  routes.ts  service.py  service.ts
server/middleware/: auth.ts
server/migrations/: articles.ts  events.ts  localArticles.ts  package.json
server/routes/: admin.ts  analytics.ts  applications.ts  articles.ts  chat.ts  contact.ts  diag.ts  events.ts  membership.ts  news.ts  payments.ts  summit.ts  vision.ts
server/services/: email.ts  paynow.ts  sms.ts  webhook.ts
(+143 files in other folders)
